--- a/index.html
+++ b/index.html
@@ -5,31 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高雄旅遊資訊</title>
     <link rel="stylesheet" href="./sass/main.css">
+    <script src="./js/jquery-3.4.1.slim.js"></script>
+    <script src="./js/parallax.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="select">
+    <div class="select" data-parallax="scroll" data-image-src="./assets/main-image.png">
         <h1 class="select-title">高雄旅遊資訊</h1>
         <select class="select-ad">
         </select>
     </div>
-    <div class="hot-ad">
-        <p class="hot-ad-title">熱門行政區</p>
-        <div class="hot-ad-ads">
-            <input type="button" value="苓雅區" class="hot-btn" style="background: #8A82CC;">
-            <input type="button" value="三民區" class="hot-btn" style="background: #FFA782;">
-            <input type="button" value="新興區" class="hot-btn" style="background: #F5D105;">
-            <input type="button" value="鹽埕區" class="hot-btn" style="background: #559AC8;">
+    <div class="section">
+        <div class="hot-ad">
+            <p class="hot-ad-title">熱門行政區</p>
+            <div class="hot-ad-ads">
+                <input type="button" value="苓雅區" class="hot-btn" style="background: #8A82CC;">
+                <input type="button" value="三民區" class="hot-btn" style="background: #FFA782;">
+                <input type="button" value="左營區" class="hot-btn" style="background: #F5D105;">
+                <input type="button" value="旗津區" class="hot-btn" style="background: #559AC8;">
+            </div>
         </div>
-    </div>
-    <div class="down">
-        <div class="down-line"></div>
-        <div class="down-icon">
-            <p>▼</p>
+        <div class="down">
+            <div class="down-line"></div>
+            <div class="down-icon">
+                <p>▼</p>
+            </div>
         </div>
-    </div>
-    <h1 class="sub-title"></h1>
-    <div class="area-list">
-    </div>
+        <h1 class="sub-title"></h1>
+        <div class="area-list">
+        </div>
+   </div>
     <script src="./js/data.js"></script>
     <script src="./js/all.js"></script>
 </body>
