--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高雄旅遊資訊</title>
     <link rel="stylesheet" href="./sass/main.css">
-    <script src="./js/jquery-3.4.1.slim.js"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/parallax.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="select" data-parallax="scroll" data-image-src="./assets/main-image.png">
-        <h1 class="select-title">高雄旅遊資訊</h1>
+        <h1 class="select-title"><a href="./index.html">高雄旅遊資訊</a></h1>
         <select class="select-ad">
         </select>
     </div>
@@ -19,10 +19,10 @@
         <div class="hot-ad">
             <p class="hot-ad-title">熱門行政區</p>
             <div class="hot-ad-ads">
-                <input type="button" value="苓雅區" class="hot-btn" style="background: #8A82CC;">
-                <input type="button" value="三民區" class="hot-btn" style="background: #FFA782;">
-                <input type="button" value="左營區" class="hot-btn" style="background: #F5D105;">
-                <input type="button" value="旗津區" class="hot-btn" style="background: #559AC8;">
+                <input type="button" value="苓雅區" class="hot-btn">
+                <input type="button" value="三民區" class="hot-btn">
+                <input type="button" value="左營區" class="hot-btn">
+                <input type="button" value="旗津區" class="hot-btn">
             </div>
         </div>
         <div class="down">
@@ -34,6 +34,17 @@
         <h1 class="sub-title"></h1>
         <div class="area-list">
         </div>
+        <script>
+            $(document).ready(function() {
+                $('.select-ad').change(function(){
+                    $('.card').slideDown(500);
+                })
+                $('.hot-btn').click(function(){
+                    $('.card').slideDown(500);
+                })
+                
+        });
+        </script>
    </div>
     <script src="./js/data.js"></script>
     <script src="./js/all.js"></script>
